# akiraka

./: .gitignore  Cargo.toml  README.md  build.rs  linecounter.py  zip.bat
assets/: help.txt  icon.txt  resources.rc
assets/java/: VersionChecker.java
core/: Cargo.toml
core/assets/: logging.xml
core/src/: network.rs
icon/: resources.rc
src/: index.html  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/ui/: index.html  test.html
src-tauri/ui/css/: main.css
src-tauri/ui/css/child/main/: bottom.css  search-input.css  titlebar.css
src/animations/: mod.rs
src/core/: install.rs  launcher.rs  mod.rs  util.rs
src/css/: styles.css  titlebar.css
src/theme/: theme.rs
src/ui/: bottom_bar.rs  download_page.rs  hello_page.rs  instances_page.rs  main_page.rs  mod.rs  settings_page.rs
src/util/: mod.rs
src/widget/: bottom_bar.rs  bounded_widget.rs  button.rs  clear_button.rs  icon.rs  icon_button.rs  icon_clear_button.rs  launch_button.rs  mod.rs  paged_widget.rs  primary_button.rs  profile_button.rs  separator.rs  side_bar_selection.rs  tabs.rs  title_bar.rs  title_bar_button.rs  title_bar_clone.rs  window.rs
