[package]
name = "akiraka"
version = "0.1.0-internal-build-20230512"
edition = "2021"
build = "build.rs"

[dependencies]
akiraka-core = { path = "core"}
rust-embed = "6.6.1"
druid = { git = "https://github.com/linebender/druid.git", version = "0.8.3"}
image = "0.24.6"
[target.'cfg(windows)'.build-dependencies]
windres = "0.2"

[profile.release]
opt-level = 'z'

#[workspace]
#members = [
#    "core",
#    "app"
#]
#
##[dependencies.windows]
##version = "0.48"
##features = [
##    "Data_Xml_Dom",
##    "Win32_Foundation",
##    "Win32_Graphics",
##    "Win32_Graphics_Dwm",
##    "Win32_Security",
##    "Win32_System_Threading",
##    "Win32_UI_WindowsAndMessaging",
##]