[package]
name = "akiraka"
version = "0.1.0-internal-build-20230512"
edition = "2021"
build = "build.rs"

[dependencies]
akiraka-core = { git = "https://github.com/Team-Akiraka/akiraka-core.git" }
rust-embed = "6.6.1"
druid = { git = "https://github.com/linebender/druid.git", version = "0.8.3", features = ["raw-win-handle", "svg"] }
image = "0.24.6"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = ["winbase", "dwmapi", "uxtheme", "winnt"]

[profile.release]
opt-level = 'z'