[package]
name = "akiraka"
version = "0.0.0"
description = "A lightweight Minecraft launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "window-close", "window-hide", "window-minimize", "window-show", "window-start-dragging", "window-unminimize", "window-center"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
raw-window-handle = "0.5"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = ["winbase", "windef", "dwmapi", "uxtheme", "winnt", "winuser"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
